--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,40 +7,37 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Erwan d'Orgeville
+    tagline: Développeur interactif & web
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    github: sharu725
+    email: info@erwandorgeville.com
+    phone: +1 514.371.7943
+    website: erwandorgeville.com #do not add http://
+    linkedin: edorgeville
+    github: edorgeville
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
+    twitter: '@edorgeville'
+    stack-overflow: edorgeville # Number/Username, e.g. 123456/alandoe
     codewars:
 
     languages:
-      - idiom: English
-        level: Native
+      - idiom: Français
+        level: Langue maternelle
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
-        level: Professional
+      - idiom: Anglais
+        level: Professionel
         
     interests:
-      - item: Climbing
+      - item: Vélo
         link:
 
-      - item: Snowboarding
+      - item: Snowboard
         link:
 
-      - item: Cooking
+      - item: E-sports
         link:
 
 career-profile:
@@ -177,23 +174,17 @@ skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
+      - name: TouchDesigner
         level: 98%
 
-      - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
-
-      - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
+      - name: Python
         level: 85%
 
-      - name: Sketch & Photoshop
-        level: 60%
+      - name: Ruby on Rails
+        level: 95%
+
+      - name: React native
+        level: 80%
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+    Template by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
